// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReservePalletRow Component Renders a ReservePallet 1`] = `
<Context.Provider
  value={
    {
      "getServerState": undefined,
      "noopCheck": "once",
      "stabilityCheck": "once",
      "store": {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <ReservePalletRow
    reservePallet={
      {
        "createDate": "2022-01-05T12:04:50.000Z",
        "expirationDate": "12/31/2022",
        "id": 1,
        "items": [
          {
            "itemDesc": "Nature Valley Honey Nut Granola Bars",
            "itemNbr": 500252,
            "locationType": 8,
            "price": 0,
            "upcNbr": "750500252570",
          },
          {
            "itemDesc": "Cabbage",
            "itemNbr": 123456,
            "locationType": 8,
            "price": 0,
            "upcNbr": "123456000789",
          },
        ],
        "palletCreateTS": "2021-01-01",
        "palletId": "1",
        "statusCode": 200,
      }
    }
    section={
      {
        "id": 1,
        "name": "Section 1",
      }
    }
    setPalletClicked={[MockFunction]}
    trackEventCall={[MockFunction]}
  />
</Context.Provider>
`;

exports[`ReservePalletRow Component Renders a ReservePallet with an item with a long name 1`] = `
<Context.Provider
  value={
    {
      "getServerState": undefined,
      "noopCheck": "once",
      "stabilityCheck": "once",
      "store": {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <ReservePalletRow
    reservePallet={
      {
        "createDate": "2022-01-05T12:04:50.000Z",
        "expirationDate": "12/31/2022",
        "id": 1,
        "items": [
          {
            "itemDesc": "Nature Valley Honey Nut Granola Bars",
            "itemNbr": 500252,
            "locationType": 8,
            "price": 0,
            "upcNbr": "750500252570",
          },
          {
            "itemDesc": "Cabbage",
            "itemNbr": 123456,
            "locationType": 8,
            "price": 0,
            "upcNbr": "123456000789",
          },
          {
            "itemDesc": "An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description An Item With A Very Long Item Description",
            "itemNbr": 980078597,
            "locationType": 8,
            "price": 2.4,
            "upcNbr": "123456789098",
          },
        ],
        "palletCreateTS": "2021-01-01",
        "palletId": "1",
        "statusCode": 200,
      }
    }
    section={
      {
        "id": 1,
        "name": "Section 1",
      }
    }
    setPalletClicked={[MockFunction]}
    trackEventCall={[MockFunction]}
  />
</Context.Provider>
`;

exports[`ReservePalletRow Component Renders a ReservePallet with no items 1`] = `
<Context.Provider
  value={
    {
      "getServerState": undefined,
      "noopCheck": "once",
      "stabilityCheck": "once",
      "store": {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <ReservePalletRow
    reservePallet={
      {
        "createDate": "2022-01-05T12:04:50.000Z",
        "expirationDate": "12/31/2022",
        "id": 1,
        "items": [],
        "palletCreateTS": "2021-01-01",
        "palletId": "1",
        "statusCode": 200,
      }
    }
    section={
      {
        "id": 1,
        "name": "Section 1",
      }
    }
    setPalletClicked={[MockFunction]}
    trackEventCall={[MockFunction]}
  />
</Context.Provider>
`;
